--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+	border: none;
+	outline: none;
+}
 header{
     background: #F3F5FC;
 }
